packages/parser/test/tokenizer/E0002-char-not-terminated-nl.txt
'a

===== err =====
anonymous:1:1: SyntaxError: E0002 - Unterminated character literal
1 | 'a
  | ~~
